# dEBM

./: 0_process.sh  CITATION.md  MOD_DATA.f90  MOD_MAIN.f90  MOD_PRE.f90  Makefile  PDD4.m  README.md  cmip2dEBM.sh  dEBM_decl.m  dEBM_sinphisind.m  dEBMmain  dEBMmain.f90  dEBMmain.m  install_debm.sh  license.txt  mod_output.mod  mod_pre.mod  namelist.debm  namelist.debm.old  namelist_pre_new.txt  restart_debm.nc
Fortran/: DATA_MODULE.f90  MOD_DATA.f90  MOD_MAIN.f90  MOD_OUTPUT.f90  MOD_PRE.f90  MOD_RESTART.f90  Makefile  PDD.f90  README.md  a.out  aa.f90  ab.f90  ab.f90~  ab1.f90  ac.f90  ad1.f90  ad2.f90  dEBM_cosphicosd.f90  dEBM_day.f90  dEBM_decl.f90  dEBM_hangle2hour.f90  dEBM_sin_phi_sin_d.f90  dEBM_sol_flux_fact.f90  dEBM_sunny_hours_c.f90  dEBMmain  dEBMmain.f90  dEBMmain_v2.f90  dEBMmain_v3.f90  dEBMmodel.f90  dEMBmain.f90  data_module.mod  mod_data.mod  mod_main.mod  mod_output.mod  mod_pre.mod  namelist.debm  namelist_pre_new.txt  pre.mod  precipitation.nc  regrid_downscale_temperature.sh  (+5 more)
Fortran-v1.0/: .MOD_MAIN.f90.un~  .gitignore  CMakeLists.txt  MOD_DATA.f90  MOD_MAIN.f90  MOD_MAIN.f90~  MOD_OUTPUT.f90  MOD_PRE.f90  MOD_RESTART.f90  README.md  dEBMmain.f90  mod_data.mod  mod_main.mod  mod_output.mod  mod_pre.mod  namelist.debm  racmo_cesm2_hist_1986-2015_ymonmean_initmip32km.nc  test.nc
Fortran-v1.0/src/debm/: CMakeLists.txt  MOD_DATA.f90  MOD_MAIN.f90  MOD_PRE.f90  MOD_RESTART.f90  dEBMmain.f90
Fortran/data/: pism.nc  (+4 more)
MATLAB/: dEBM_cosphicosd.m  dEBM_day.m  dEBM_hangle2hours.m  dEBM_sol_flux_fact.m  dEBM_sunny_hours_c.m  dEBMmain.m  dEBMmodel.m
(+1 files in other folders)
